# cloud

./: README.md
0.spec/Research/: DATABASE_DECISION_MATRIX.md  database-3d-matrix.html
0.spec/archive/: 4.tasks.md  arch_diagram.md  cloud-dashboard.sh  index.html
0.spec/quartz_output/: 404.html  MASTERPLAN_CLOUD.html  index.xml  sitemap.xml
0.spec/v1/: MASTERPLAN_AI.md  MASTERPLAN_LINKTREE.md  (+3 more)
1.ops/: Cloud-spec.md  cloud_architecture.json  cloud_control.json  z__security_check.md
a_solutions/: front_Cloud
a_solutions/back-cloud_control_center/c3-in_house/v2/collector/0_cloud_control_py/: main.py  pyproject.toml
a_solutions/back-cloud_control_center/c3-in_house/v2/collector/0_cloud_control_py/app/: __init__.py  api_client.py  cloudflare.py  commands.py  config_loader.py  exporters.py  mcp_client.py  models.py  monitors.py  tui.py
a_solutions/back-cloud_control_center/c3-in_house/v2/collector/0_cloud_control_py/config/: config.json
a_solutions/back-cloud_control_center/c3-in_house/v2/collector/0_cloud_control_py/exports/: cloud_data_20251219_163957.js  cloud_data_20251219_163957.json  cloud_data_20251219_163957.md  cloud_data_20251219_164233.md  cloud_data_20251219_170028.json  containers_20251219_163957.csv  hosts_20251219_163957.csv
a_solutions/back-cloud_control_center/c3-in_house/v2/collector/0_cloud_control_py/konsole_config/: ssh_config
a_solutions/front-apps/cloud_connect/legacy/: Cargo.toml
a_solutions/front-apps/cloud_connect/legacy/src/: lib.rs
a_solutions/front-apps/cloud_connect/legacy/src/cli/: parser.rs
a_solutions/front-apps/cloud_connect/legacy/src/config/: vms.rs
a_solutions/front-apps/cloud_connect/legacy/src/connect/: mod.rs  mount.rs  ssh.rs
a_solutions/front-apps/cloud_connect/legacy/src/export/: mod.rs
a_solutions/front-apps/cloud_connect/legacy/src/setup/: apps.rs  mod.rs
a_solutions/front-apps/cloud_connect/legacy/src/status/: mod.rs
(+373 files in other folders)
