[tool.poetry]
name = "cloud-control-center"
version = "0.1.0"
description = "Cloud Control Center TUI"
authors = ["Diego Marcos"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
textual = "^6.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
